chore: Update stats component styles to fix layout issues

--- a/config/styles/components/stats.css
+++ b/config/styles/components/stats.css
@@ -1,9 +1,9 @@
 section#stats {
-    @apply flex flex-wrap items-start max-w-full gap-4 overflow-x-auto;
+    @apply flex flex-wrap items-start max-w-full w-full gap-4 overflow-x-auto;
 }
 
 .stats__item {
-    @apply flex flex-grow flex-col items-start justify-start bg-white border border-gray-200 rounded-lg p-4 w-[24.5%] h-52 min-w-64 shadow-sm;
+    @apply flex flex-col items-start justify-start bg-white border border-gray-200 rounded-lg p-4 flex-[16rem] flex-grow-[25%] flex-shrink-0 h-52 min-w-64 shadow-sm;
 }
 
 .stats__item > div:first-child {
